--- a/libvmaf/tools/meson.build
+++ b/libvmaf/tools/meson.build
@@ -3,10 +3,12 @@ if cc.has_function('strsep')
   compat_cflags += '-DHAVE_STRSEP'
 endif
 
+dlb_deitp_include = include_directories('../src/feature/')
+
 vmafossexec = executable(
     'vmafossexec',
     [src_dir + 'main.cpp', src_dir + 'read_frame.c'],
-    include_directories : libvmaf_inc,
+    include_directories : [libvmaf_inc,dlb_deitp_include],
     dependencies: [stdatomic_dependency],
     c_args : vmaf_cflags_common,
     cpp_args : vmaf_cflags_common,
@@ -17,7 +19,7 @@ vmafossexec = executable(
 vmaf_rc = executable(
     'vmaf_rc',
     ['vmaf.c', 'cli_parse.c', 'y4m_input.c', 'vidinput.c', 'yuv_input.c'],
-    include_directories : [libvmaf_inc, vmaf_include],
+    include_directories : [libvmaf_inc, vmaf_include, dlb_deitp_include],
     dependencies: [stdatomic_dependency],
     c_args : [vmaf_cflags_common, compat_cflags],
     link_with : libvmaf_rc.get_static_lib(),
@@ -27,7 +29,7 @@ vmaf_rc = executable(
 vmaf_feature = executable(
     'vmaf_feature',
     [src_dir + 'vmaf_feature_main.c', src_dir + 'read_frame.c'],
-    include_directories : libvmaf_inc,
+    include_directories : [libvmaf_inc, dlb_deitp_include],
     dependencies: [stdatomic_dependency],
     c_args : vmaf_cflags_common,
     cpp_args : vmaf_cflags_common,
